--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <div style="height: 100vh;">
             <h2 style="font: caption; font-size: 1rem; color: black; text-align: center;"><strong>404</strong></h2>
             <h2 style="font: caption; font-size: 1rem; color: black; text-align: center;">Page not found. Please check the URL.</h2>
+            <h2 style="font: caption; font-size: 1rem; color: black; text-align: center;">Blog Link is - <a href="https://blog.inivrex.in/">BLOG.INIVREX.IN</a></h2>
         </div>
     </section>
     <a href="https://wa.me/8193070049?text=Hi, I came here through your website." id="FloatingWALink"></a>
